[gd_scene load_steps=14 format=2]

[ext_resource path="res://textures/Projectiles.png" type="Texture" id=1]
[ext_resource path="res://scripts/Projectile.gd" type="Script" id=2]
[ext_resource path="res://scenes/Projectile.material" type="Material" id=3]
[ext_resource path="res://sounds/Explosion.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.699144
height = 1.73811

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 0, 0, 1 )
metallic_specular = 1.0
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 4.4
emission_operator = 0
emission_on_uv2 = false
proximity_fade_enable = true
proximity_fade_distance = 1.0
distance_fade_mode = 1
distance_fade_min_distance = 0.5
distance_fade_max_distance = 3.0

[sub_resource type="Curve" id=3]
max_value = 10.0
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 10 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
render_priority = 1
lifetime_randomness = 0.1
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, -1, 0 )
angular_velocity = 50.0
angular_velocity_random = 0.16
angle = 269.0
angle_random = 1.0
angle_curve = SubResource( 4 )
scale = 0.3
scale_random = 0.36

[sub_resource type="QuadMesh" id=6]
material = ExtResource( 3 )
size = Vector2( 0.2, 0.2 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3( 0, 1, 0 )
spread = 78.61
gravity = Vector3( 0, -3, 0 )
initial_velocity = 5.0
initial_velocity_random = 0.5
angular_velocity = 5.0
angular_velocity_random = 0.3
angle = 720.0

[sub_resource type="QuadMesh" id=8]
material = ExtResource( 3 )
size = Vector2( 0.3, 0.3 )

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Particles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteOrigin/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explosion:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shake"
}, {
"args": [ false ],
"method": "setMoving"
}, {
"args": [  ],
"method": "tweenOut"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("Audio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[node name="Projectile" type="Area"]
script = ExtResource( 2 )
color = Color( 1, 0, 0, 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="SpriteOrigin" type="Position3D" parent="."]

[node name="Sprite" type="Sprite3D" parent="SpriteOrigin"]
material_override = SubResource( 2 )
modulate = Color( 0, 1, 0.0627451, 1 )
pixel_size = 0.125
billboard = 1
shaded = true
alpha_cut = 2
texture = ExtResource( 1 )
hframes = 4

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
material_override = SubResource( 2 )
amount = 30
lifetime = 1.12
preprocess = 100.0
explosiveness = 0.31
randomness = 1.0
visibility_aabb = AABB( -16, -16, -16, 32, 32, 32 )
local_coords = false
draw_order = 2
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )

[node name="Explosion" type="Particles" parent="."]
material_override = SubResource( 2 )
emitting = false
amount = 50
one_shot = true
explosiveness = 1.0
randomness = 0.37
local_coords = false
draw_order = 2
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Explode = SubResource( 9 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true
autostart = true

[node name="Audio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
bus = "FX"
[connection signal="body_entered" from="." to="." method="on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
